--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "React-Clean-Architecture-Model",
+  "name": "react-clean-architecture-model",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/aryclenio/React-Clean-Architecture-Model.git",
   "author": "Ary <aryclenio.barros@truckpad.com.br>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-standard-with-typescript": "11",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
