:fire: Modifying husky configs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Ary <aryclenio.barros@truckpad.com.br>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:watch": "yarn jest -- --watch",
+    "test:staged": "yarn jest -- --findRelatedTests",
+    "test:ci": "yarn jest -- --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
