--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "test:watch": "yarn jest -- --watch",
-    "test:staged": "yarn jest -- --findRelatedTests",
-    "test:ci": "yarn jest -- --coverage"
+    "test:watch": "yarn test --watch",
+    "test:staged": "yarn test --findRelatedTests",
+    "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
