--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
@@ -39,7 +40,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "faker": "^5.1.0"
+    "axios": "^0.21.1",
+    "faker": "^5.1.0",
+    "react": "^17.0.1"
   }
 }
