--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "faker": "^5.1.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
