--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -37,10 +38,15 @@
     "eslint-plugin-react-hooks": "4",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^4.3.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.12.3",
     "webpack-cli": "^4.3.1",
