--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,12 +24,13 @@
     "prettier"
     ],
   "rules": {
+    "no-unused-vars": "off",
     "no-empty-function":"off",
     "no-useless-constructor": "off",
     "class-methods-use-this": "off",
     "max-classes-per-file": ["error", 10],
-    "no-unused-vars": "off",
     "prettier/prettier": "error",
+    "no-use-before-define": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strinc-boolean-expressions": "off",
